--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
             <div class="card shadow" style="border-radius: 15px; background-color: #1c1c1c; color: #fff;">
                 <div class="card-body">
                     <h4 class="card-title" style="color: #28a745;">{{ result }}</h4>
-                    <p class="card-text" style="color: #ffffff;">Confidence: {{ confidence }}%</p>
+                    <p class="card-text" style="color: #ffffff;">Confidence: {{ confidence }}</p>
                     <img src="{{ file_path }}" class="img-fluid rounded" alt="Uploaded Image" style="max-height: 400px; margin-top: 15px;">
                 </div>
             </div>
